load("//bazel/rules_kardashev:defs.bzl", "kardashev_binary")

# Readable by //tests:smoke_test_phase88..93.
exports_files(
    ["lexer.kd", "tokens.kd", "parser.kd", "printer.kd", "checker.kd", "front.kd", "expr.kd", "stmt.kd", "scopechk.kd", "interp.kd", "func.kd", "typeck.kd"],
    visibility = ["//visibility:public"],
)

# Roadmap v15 (self-hosting): a kardashev compiler FRONT-END written IN
# kardashev. 88 byte classifier; 89 token-stream lexer; 90 parser (FnSig AST);
# 91 AST printer (round-trip); 92 scope checker (HashMap symbol table);
# 93 CAPSTONE front.kd = the whole front end-to-end (lex -> parse -> check -> print).
kardashev_binary(name = "lexer", src = "lexer.kd")
kardashev_binary(name = "tokens", src = "tokens.kd")
kardashev_binary(name = "parser", src = "parser.kd")
kardashev_binary(name = "printer", src = "printer.kd")
kardashev_binary(name = "checker", src = "checker.kd")
kardashev_binary(name = "front", src = "front.kd")
# v16 Phase 94: expression parser + evaluator (variables, precedence, parens).
kardashev_binary(name = "expr", src = "expr.kd")
# v16 Phase 95: a statement/block parser + evaluator.
kardashev_binary(name = "stmt", src = "stmt.kd")
# v16 Phase 96: a scope/semantic checker (undefined-variable detection).
kardashev_binary(name = "scopechk", src = "scopechk.kd")
# v16 Phase 97 CAPSTONE: a function-body interpreter (lex->parse->check->eval).
kardashev_binary(name = "interp", src = "interp.kd")
# v17 Phase 98: a whole-function parser + interpreter (signature + body).
kardashev_binary(name = "func", src = "func.kd")
# v17 Phase 101: a real TYPE CHECKER over an i64/bool expression language.
kardashev_binary(name = "typeck", src = "typeck.kd")
